<resources>
    <string name="app_name">Lawnicons by TeamFiles</string>
    <string name="page_home">Home</string>
    <string name="what_is_lawnicons">Lawnicons by TeamFiles</string>
    <string name="lawnicons_desc_1">Lawnicons is an extension to Lawnchair Launcher to add themed icons.</string>
    <string name="lawnicons_desc_2">We, the TeamFiles team have added custom icons designed by our artists to make your homescreen look unique.</string>
    <string name="lawnicons_desc_3">Wanna request for missing icons?</string>
    <string name="how_to_use_title">How to Apply?</string>
    <string name="how_to_use_desc">Press and hold on your home screen. \nTap on Launcher Settings to open Lawnchair’s settings. \nNow go to General>Icon Pack>Themed Icons and choose your preferred option.</string>
    <string name="request_icon">Request Icons</string>
    <string name="page_about">About</string>
    <string name="about_title">Contributors</string>
    <string name="latest_icons">Newest Icons</string>
    <string name="install_browser">Please install a browser!!!</string>
    <string name="page_icons">Icons</string>
    <string name="icons_title">All Icons</string>
</resources>